--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "mocha": "^7.1.1",
     "protractor": "^7.0.0",
     "selenium-webdriver": "^4.0.0-alpha.8",
-    "winston": "^3.2.1",
+    "winston": "^3.3.3",
     "yargs": "^14.0.0"
+  },
+  "devDependencies": {
+    "winston-daily-rotate-file": "^4.5.0"
   }
 }
